# dine-fe2

./: .deploy-trigger  .dockerignore  .gitignore  BLOG_GUIDELINES.md  BUILD.md  CLAUDE.md  Dockerfile  GCS-RELEASE.md  README.md  SEO_AUDIT.md  capacitor.config.ts  electron-builder-local.yml  electron-builder.yml  firebase.js  krishnas-dosa-kadai-menu.json  next.config.electron.mjs  next.config.js  next.config.mjs  next.config.tauri.mjs  package-lock.json  package.json
.github/workflows/: build-desktop.yml  build-electron.yml  test-windows-print.yml
android/: settings.gradle
android/app/: build.gradle
electron/: entityStore.js  hub.js  imageStore.js  lanDiscovery.js  localDb.js  localRouter.js  main.js  offline.js  preload.js  syncDaemon.js  terminalIdentity.js
electron/etims/: vscuRelay.js
electron/icons/: icon.icns
gcs-releases/: latest-mac.yml
ios/App/: Podfile
plugins/capacitor-dine-printer/: DinePrinter.podspec  package.json
public/: enterprise-pricing.html  firebase-messaging-sw.js  llms-full.txt  llms.txt  manifest.json  proposal-4-outlets.html  robots.txt  sw.js
public/blog/: best-billing-software-small-restaurant.html  best-catering-management-software-india.html  best-epos-indian-takeaway-uk-2026.html  best-free-pos-ice-cream-shop.html  best-free-restaurant-pos-usa-2026.html  best-pos-food-truck-2026.html  (+96 more)
sales-docs/: dineopen-quick-pitch.html  dineopen-sales-book.html
scripts/: build-electron.js  build-tauri.js  download-placeholders.js  notarize.js  release-gcs.js  replace-menu.js
src/: middleware.js  sw.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache_invalidation.rs  db.rs  lib.rs  main.rs  sync.rs
src-tauri/src/commands/: api_proxy.rs  mod.rs  print.rs  sync_control.rs
(+931 files in other folders)
