[package]
name = "dineopen-pos"
version = "1.0.0"
description = "DineOpen POS Desktop App"
edition = "2021"

[lib]
name = "dineopen_pos_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
